--- a/projects/QuenChing-Mod-Client/src/Renderer/Browser-Showcase-Pages/style.module.less
+++ b/projects/QuenChing-Mod-Client/src/Renderer/Browser-Showcase-Pages/style.module.less
@@ -1,7 +1,7 @@
 .showcase {
 	overflow: hidden;
-	padding: 8px;
 	width: 100%;
+	height: 100%;
 	box-sizing: border-box;
 	transition: width ease .25s 0s;
 	display: flex;
