--- a/projects/QuenChing-Mod-Client/src/Renderer/components/War3Re/PrimaryBtn/style/index.module.less
+++ b/projects/QuenChing-Mod-Client/src/Renderer/components/War3Re/PrimaryBtn/style/index.module.less
@@ -31,6 +31,12 @@
 			display: flex;
 			color: #ffdd33;
 			
+			&:hover{
+				color: #fd3;
+				text-shadow: 0 2px 4px #000;
+				border-image-source: url("../assets/wc3_btn_blue_hover_4k.png");
+			}
+			
 			.btn-bg {
 				text-align: center;
 			}
